# csp

./: .gitattributes  Makefile  README.md
.devcontainer/backend/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
.github/workflows/: backend.yml  extension.yml  main.yml
agent_tools/: .gitignore  README.md  pyproject.toml  requirements.txt  results.csv  scraper_service.py  worker.py  worker_module.py
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_dummy_run.py
backend/app/: main.py
backend/app/api/: routes_items.py  routes_process.py  routes_scrape.py
backend/app/core/: config.py
backend/app/models/: __init__.py  item.py  scrape.py
backend/app/services/: __init__.py  agent_tools.py  gemini_agent.py  html_renderer.py  scraping_service.py  validation_service.py
backend/tests/: integration_test_gemini_agent.py  test_basic.py  test_gemini_agent.py
docs/: development-diary.MD  development-diary.md  extensions-to-browser.md  routes_process.md
extension/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/: content.ts
extension/entrypoints/background/: BackgroundService.ts  index.ts
extension/entrypoints/background/__tests__/: background.test.ts
extension/entrypoints/content/: htmlRenderUtils.ts  index.ts
extension/entrypoints/popup/: App.css  App.tsx  HtmlPreview.css  HtmlPreview.tsx  ResponsesList.tsx  StorageView.tsx  UrlsList.tsx
extension/types/: env.d.ts
extension/utils/: storage.ts
test/: first_html.html  second_html.html
